# StockSimulator

./: .gitignore  Cargo.toml  build.rs  crsp.us.txt  dell.us.txt  zep.txt
brokage_house_available_stocks/: TEST.csv  XTB.csv
proto/: arima_connector.proto
src/: ChainedStrategy.rs  atr.rs  broker_fee.rs  ema.rs  keltner_channel.rs  macd.rs  main.rs  stop_loss_strategy.rs  strategy_simulator.rs  take_profit_strategy.rs
src/brokage/: brokage_stocks.rs  mod.rs
src/grid_search/: grid_search.rs  mod.rs  parameter.rs
src/results_statistics/: average_roi.rs  mod.rs  monte_carlo.rs  profitable_investment.rs
src/serde_serialization/: mod.rs  naive_date_yyyymmdd_format.rs
src/stock_data_reader/: mod.rs  stock_data_reader.rs
src/strategies/: arima.rs  ema_crossover_strategy.rs  ema_long_term_trend.rs  growing_ema_investing_strategy.rs  keltner_channel_investing_strategy.rs  macd_divergence_strategy.rs  macd_strategy.rs  mod.rs  rsi_strategy.rs
src/technical_analysis/: atr.rs  ema.rs  keltner_channel.rs  macd.rs  mod.rs
src/technical_indicator/: atr.rs  keltner_channel.rs  macd.rs  mod.rs  percent_off_ath.rs  rsi.rs
src/utils/: mod.rs  rolling_window.rs  vec_to_csv.rs
