[package]
name = "MacdDivergence"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
rayon = "1.10.0"
charming = { version = "0.3.1", features = ["ssr"] }
chrono = "0.4.38"
itertools = "0.13.0"
ringbuf = "0.4.4"
rand = "0.8.5"
arima = "0.3.0"
tonic = "0.12.3"
prost = "0.13.4"
tokio = "1.42.0"

[build-dependencies]
tonic-build = "0.12.3"